logs/ckanext-esdstandards.log
Listing '.'...
Listing './bin'...
Listing './ckanext-esdstandards-data'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/ckanext'...
Listing './lib/python3.5/site-packages/ckanext/esdstandards'...
Compiling './lib/python3.5/site-packages/ckanext/esdstandards/commands.py'...
***   File "./lib/python3.5/site-packages/ckanext/esdstandards/commands.py", line 44
    print self.usage
             ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/ckanext/esdstandards/fanstatic'...
Listing './lib/python3.5/site-packages/ckanext/esdstandards/templates'...
Listing './lib/python3.5/site-packages/ckanext/esdstandards/templates/snippets'...
Listing './lib/python3.5/site-packages/ckanext/esdstandards/tests'...
Listing './lib/python3.5/site-packages/ckanext/esdstandards/tests/mockplugin'...
Listing './lib/python3.5/site-packages/ckanext/esdstandards/tests/mockplugin/templates'...
Listing './lib/python3.5/site-packages/ckanext/esdstandards/tests/mockplugin/templates/package'...
Listing './lib/python3.5/site-packages/ckanext/esdstandards/tests/mockplugin/templates/package/snippets'...
Listing './lib/python3.5/site-packages/ckanext-esdstandards-data'...
Listing './lib/python3.5/site-packages/ckanext_esdstandards-0.0.6.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
